# portofolio_analysis_system_project

./: .gitignore  app.py  chat.db  chat_bkp_v1.db  home_bkp.py  langgraph.json  main.py  pyproject.toml  requirements.txt
assets/: script.js  style.css
data/: checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  historical_data.parquet  portfolio.db  portfolio.json
pages/: alerts.py  dashboard.py  home.py  home_callbacks.py
src/: main.py  news_tools.py  state.py  tools.py  utils.py
src/agent/: create_llm.py  graph.py  news_agent.py  portfolio_agent.py  supervisor_agent.py
src/tools/: communication_tools.py  portfolio_tools.py  stock_tools.py
src/utils/: analytics.py  db_utils.py  mock_data.py  utils.py
ui_utils/: db.py  llm.py  llm_mock_bkp.py
