[project]
name = "portfolio-agent-system"
version = "0.2.0"
description = "Multi-agent portfolio management system with guardrails using LangGraph"
authors = [
    {name = "Subba Reddy Genupula", email = "genupulasubbareddy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.2.0",
    "langchain-core>=0.1.0",
    "langgraph-checkpoint-sqlite>=0.0.1",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "numpy-financial>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
